# BxOCRui

./: .gitignore  PaddleOCR.yaml  README.md  api.py  classes.py  config.py  config.yaml  log.py  main.py  model.py  pyproject.toml  requirements.txt  utils.py
front-end/: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
front-end/src/: App.css  App.tsx  api.ts  classes.ts  main.tsx
front-end/src/components/: Home.tsx  NotFound.tsx  Sidebar.tsx
front-end/src/components/Invoice/: Invoice.tsx  crud.ts  verify.ts
front-end/src/script/: handlePyApi.ts
front-end/src/store/: invoiceList.ts
front-end/src/utils/: conver.ts
